# moai-iplweb

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  LICENSE.txt  README.md  README.rst  moai.wsgi  pyproject.toml  tox.ini
.github/workflows/: test.yml
docs/: conf.py
moai/: database.py  error.py  example.py  interfaces.py  metadata.py  oai.py  server.py  test.py  tools.py  utils.py  wsgi.py
moai/metadata/: dare_didl.py  didl.py  mods.py  oaidc.py
moai/provider/: fedora.py  file.py  list.py  oai.py
